--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
 <body>
     <nav class="navbar sticky-top d-lg-flex">
-        <span class="d-none d-lg-block text-white text-monospace lead">Thu, Jun, 2020</span>
-        <img class="navbar-brand w-25" src="images/logo.png" alt=" ">
+        <span class="d-none d-lg-block text-white text-monospace lead">MON, JAN, 2021</span>
+        <img class="navbar-brand w-25" src="assets/logo.png" alt=" ">
         <div class="d-flex align-items-center justify-content-between"> 
             <i class="fas fa-portrait text-white d-md-none mr-3"></i>
             <a href="#" class="text-white font-weight-bold lead text-monospaced d-none d-md-block mr-3">LOGIN</a>
