adding feature branch

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-    <title>Title</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -17,16 +16,16 @@
 
 <body>
     <nav class="navbar sticky-top d-lg-flex">
-        <span class="d-none d-lg-block text-white text-monospace lead">MON, JAN, 2021</span>
-        <img class="navbar-brand w-25" src="assets/logo.png" alt=" ">
+        <span class="d-none d-lg-block text-white text-monospace lead">Wed, Jan 20, 2021</span>
+        <img class="navbar-brand w-25" src="assets/logo1.png" alt="logo ">
         <div class="d-flex align-items-center justify-content-between"> 
             <i class="fas fa-portrait text-white d-md-none mr-3"></i>
             <a href="#" class="text-white font-weight-bold lead text-monospaced d-none d-md-block mr-3">LOGIN</a>
-            <button class="btn bg-warning btn-sm mr-3" type="button">SUBSCRIBE></button>
+            <button class="btn bg-warning btn-sm " type="button">SUBSCRIBE></button>
             <span class="fas fa-bars text-white d-lg-none"></span>             
         </div>
     </nav>
-    <nav class="navbar bg-light d-none d-lg-flex text-black font-weight-bold my-2">
+    <nav class="navbar bg-light d-none d-lg-flex text-black font-weight-bold mynav2">
             <a href="#">U.S.</a>
             <a href="#">World</a>
             <a href="#">Business</a>
