fixing navbar sandwich icon

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 </head>
 
 <body>
-    <nav class="navbar sticky-top d-lg-flex">
-        <span class="d-none d-lg-block text-white text-monospace lead">Wed, Jan 20, 2021</span>
+    <nav class="navbar sticky-top d-sm-flex ">
+        <span class="d-none d-sm-block text-white text-monospace lead">Wed, Jan 20, 2021</span>
         <img class="navbar-brand w-25" src="assets/logo1.png" alt="logo ">
-        <div class="d-flex align-items-center justify-content-between"> 
+        <div class="d-flex align-items-center justify-content-between ddd"> 
             <i class="fas fa-portrait text-white d-md-none mr-3"></i>
             <a href="#" class="text-white font-weight-bold lead text-monospaced d-none d-md-block mr-3">LOGIN</a>
-            <button class="btn bg-warning btn-sm " type="button">SUBSCRIBE></button>
-            <span class="fas fa-bars text-white d-lg-none"></span>             
+            <button class="btn bg-warning btn-sm "  type="button">SUBSCRIBE></button>
+            <span class="fas fa-bars text-white d-sm-none clearfix" style="margin-left: 20px;"></span>             
         </div>
     </nav>
     <nav class="navbar bg-light d-none d-lg-flex text-black font-weight-bold mynav2">
