adding section1,styling

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
     <div class="container">
-    <nav class="navbar navbar-fixed-top d-lg-flex">
+    <nav class="navbar navbar-fixed-top d-lg-flex mt-md-4">
         <span class="d-none d-lg-block text-white text-monospace lead">Wed, Jan 20, 2021</span>
         <img class="navbar-brand w-25" src="assets/logo.png" alt="logo ">
         <div class="d-flex align-items-center justify-content-between"> 
@@ -29,6 +29,7 @@
             <span class="fas fa-bars text-white d-lg-none"></span>           
         </div>
     </nav>
+</div>
 </div>
 
     <nav class="navbar bg-light d-none d-lg-flex text-black font-weight-bold mynav2">
@@ -58,8 +59,40 @@
                 <a href="">VACCINE</a>
                 <a href="">CAPITOL RIOTS</a>
             </div>
-        </div>
     </nav>
+
+     </div>
+
+     <div class="container-fluid mainbody">
+         <div class="row">
+            <article class="col-md-7 order-md-2 col-lg-5 mt-2 border-bottom border-bottom-md-0">
+                <h6 class="text-headine">TOP STORY</h6>
+                <a href="#">
+                    <img class="w-100" src="assets/joebiden.jpg" alt=" ">
+                    <span class="bg-light font-weight-bolder p-1">WORLD</span>
+                    <h5 class="font-weight-bold">Joe Biden's First Executive Actions Undo Many of Donald Trump's</h5>
+                </a>
+                <p>Actions related to the COVID-19 crisis, climate change and racial equality are to be among the first taken as he begins his tenure.</p>
+            </article>
+            <section class="col-md-5 order-md-1 col-lg mt-2 scroll">
+                <h6 class="text-headine">FEATURED STORIES</h6>
+                <article class="headine">
+                    <a href="#">
+                        <img class="w-100" src="assets/donald-trump.webp" alt=" ">
+                        <span class="bg-light font-weight-bolder p-1">U.S.</span>
+                        <h5 class="font-weight-bolder">The pardons included one for Trump’s former campaign manager and senior adviser Steve Bannon. </h5>
+                    </a>
+                    <p>Outgoing U.S. President Donald Trump issued pardons to 73 people and commuted the sentences of 70 others, the White House announced early Wednesday, hours before the end of his term. .</p>
+                </article>
+                <article>
+         </div>
+         
+     </div>>
+
+
+     </div>
+
+
 
     <footer class="footerbb">
         <div class="d-flex flex-row justify-content-between footer d-sm flex-column">
