adding images limks and fixed identation

--- a/index.html
+++ b/index.html
@@ -106,36 +106,31 @@
                                 <div class="category">
                                     <a href="#">POLITICS</a>
                                 </div>
-                                <a href="#"> <img class="editor-img" src="assets/donald-trump.webp" alt=""></a>
+                                <a href="#"> <img class="editor-img" src="assets/exppert.jpg" alt="expert"></a>
                             </div>
-                            <h3><a href="#">Trump Said He'll Return, but Most Think He Shouldn't Be Able to Run
-                                    Again</a></h3>
-                            <div class="summery">The outgoing president has previously alluded to running in 2024, with
-                                comments having hinted at feeling he has unfinished business.</div>
+                            <h3><a href="#">Newsweek Announces Launch of the Newsweek Expert Forum</a></h3>
+                            <div class="summery">Newsweek Expert Forum creates cohort of thought leaders, pioneering thinkers to share insights, expertise from range of professions, industries.</div>
                         </article>
                         <article>
                             <div class="wrap">
                                 <div class="category">
                                     <a href="#">POLITICS</a>
                                 </div>
-                                <a href="#"> <img class="editor-img" src="assets/donald-trump.webp" alt=""></a>
+                                <a href="#"> <img class="editor-img" src="assets/latestnews-4.jpg" alt="trupflight"></a>
                             </div>
-                            <h3><a href="#">Trump Said He'll Return, but Most Think He Shouldn't Be Able to Run
-                                    Again</a></h3>
-                            <div class="summery">The outgoing president has previously alluded to running in 2024, with
-                                comments having hinted at feeling he has unfinished business.</div>
+                            <h3><a href="#">Can Joe Biden Rescind Donald Trump's Pardons?</a></h3>
+                            <div class="summery">The president did not issue pardons for himself, his children or for former New York Mayor Rudy Giuliani.</div>
                         </article>
                         <article>
                             <div class="wrap">
                                 <div class="category">
                                     <a href="#">POLITICS</a>
                                 </div>
-                                <a href="#"> <img class="editor-img" src="/img/6.webp" alt=""></a>
+                                <a href="#"> <img class="editor-img" src="assets/johimmigration.jpg" alt="immigration"></a>
                             </div>
                             <h3><a href="#">Trump Said He'll Return, but Most Think He Shouldn't Be Able to Run
                                     Again</a></h3>
-                            <div class="summery">The outgoing president has previously alluded to running in 2024, with
-                                comments having hinted at feeling he has unfinished business.</div>
+                            <div class="summery">The Biden Administration will issue an order stopping construction of the border wall on its first day.</div>
                         </article>
 
                     </div>
@@ -550,6 +545,7 @@
                     </div>
                 </div>
             </div>
+        </div>
 
 
 
