adding section in more stories ,latest news

--- a/index.html
+++ b/index.html
@@ -128,8 +128,7 @@
                                 </div>
                                 <a href="#"> <img class="editor-img" src="assets/johimmigration.jpg" alt="immigration"></a>
                             </div>
-                            <h3><a href="#">Trump Said He'll Return, but Most Think He Shouldn't Be Able to Run
-                                    Again</a></h3>
+                            <h3><a href="#"> Joe Biden Immigration Orders Upend Donald Trump's Legacy</a></h3>
                             <div class="summery">The Biden Administration will issue an order stopping construction of the border wall on its first day.</div>
                         </article>
 
@@ -263,7 +262,7 @@
                                 </div>
                                 <div class="clearfix">
                                     <div class="image-float">
-                                        <img src="assets/missisipi.jpg" alt="missispi">
+                                        <img src="asset" alt="missispi">
                                     </div>
                                     <h4><a href="#">Sanders, Warren Warn Senate Majority Will Be Used in 'Very
                                             Aggressive Way'</a></h4>
@@ -342,48 +341,56 @@
                                     <h4><a href="#">Fake Gen. Hyten Telegram Channel Spreads Qanon Slogans Before
                                             Inauguration</a></h4>
                                     <div class="summery">Gen. Hyten, who is the vice chairman of the Joint Chiefs of
-                                        Staff and the country's second.../div>
+                                        Staff and the country's second...
                                     </div>
                                     <div class="clearfix">
                                         <div class="image-float">
-                                            <img src="/img/9.webp" alt="">
+                                            <img src="assets/trupd.jpg" alt="trupd">
                                         </div>
-                                        <h4><a href="#">Sanders, Warren Warn Senate Majority Will Be Used in 'Very
-                                                Aggressive Way'</a></h4>
+                                        <h4><a href="#">Trump's Pardon List Leaves Off Snowden, Assange and Winner</a></h4>
                                         <div class="summery">"If we pass [the stimulus package] with 51 votes, we'll
                                             pass it with 51 votes," Vermont Senator Bernie Sanders said in support of
                                             the 'budget reconciliation' process in the Senate.</div>
                                     </div>
                                     <div class="clearfix">
                                         <div class="image-float">
-                                            <img src="/img/9.webp" alt="">
+                                            <img src="assets/ncis.jpg" alt="">
                                         </div>
-                                        <h4><a href="#">Sanders, Warren Warn Senate Majority Will Be Used in 'Very
-                                                Aggressive Way'</a></h4>
-                                        <div class="summery">"If we pass [the stimulus package] with 51 votes, we'll
-                                            pass it with 51 votes," Vermont Senator Bernie Sanders said in support of
-                                            the 'budget reconciliation' process in the Senate.</div>
+                                        <h4><a href="#">'NCIS' Season 18 Reveals Why Gibbs Shot McGee</a></h4>
+                                        <div class="summery">"NCIS" Season 18, Episode 5 on CBS finally came back to the opening of the season, which saw Gibbs...</div>
                                     </div>
                                     <div class="clearfix">
                                         <div class="image-float">
-                                            <img src="/img/9.webp" alt="">
+                                            <img src="assets/kodak.jpg" alt="kodak">
                                         </div>
-                                        <h4><a href="#">Sanders, Warren Warn Senate Majority Will Be Used in 'Very
-                                                Aggressive Way'</a></h4>
-                                        <div class="summery">"If we pass [the stimulus package] with 51 votes, we'll
-                                            pass it with 51 votes," Vermont Senator Bernie Sanders said in support of
-                                            the 'budget reconciliation' process in the Senate.</div>
+                                        <h4><a href="#">Kodak Black Pardoned by Trump Two Months After $1 Million Charity Pledge</a></h4>
+                                        <div class="summery">The rapper is serving a four-year sentence in federal prison after pleading guilty to possession of...</div>
                                     </div>
                                     <div class="clearfix">
                                         <div class="image-float">
-                                            <img src="/img/9.webp" alt="">
+                                            <img src="assets/ali.jpg" alt="ali">
                                         </div>
-                                        <h4><a href="#">Sanders, Warren Warn Senate Majority Will Be Used in 'Very
-                                                Aggressive Way'</a></h4>
-                                        <div class="summery">"If we pass [the stimulus package] with 51 votes, we'll
-                                            pass it with 51 votes," Vermont Senator Bernie Sanders said in support of
-                                            the 'budget reconciliation' process in the Senate.</div>
+                                        <h4><a href="#">Trump Ally Gaetz Wants More GOP Leaders With Outgoing President's 'Spirit'</a></h4>
+                                        <div class="summery">The Republican congressman spoke of looking to "continue to harness the energy of the Trump...</div>
                                     </div>
+
+                                    <div class="clearfix">
+                                        <div class="image-float">
+                                       <img src="assets/placecorona.jpg" alt="hellow">
+                                               </div>
+                                  <h4><a href="#">These Places Are Running Out of COVID Vaccines in the U.S.</a></h4>
+                                  <div class="summery"> New York City, the country's most populous city, was reported to have enough vaccines to administer...</div>
+                                    </div>
+
+                                    <div class="clearfix">
+                                        <div class="image-float">
+                                       <img src="assets/meghan.jpg" alt="mehagan">
+                                               </div>
+                                  <h4><a href="#">Meghan Markle Details Leaked to U.K. Tabloid by 'High-Grade' Royal Source</a></h4>
+                                  <div class="summery"> The Duchess of Sussex's aide opened doors for the authors of a biography that accused Prince....</div>
+                                    </div>
+
+
                                 </div>
                             </div>
                         </div>
