--- a/index.html
+++ b/index.html
@@ -553,6 +553,7 @@
                 </div>
             </div>
         </div>
+        
 
 
 
@@ -619,6 +620,7 @@
                 crossorigin="anonymous">
             </script>
             <script src="scipts/script.js"></script>
+    </div>
 </body>
 
 </html>
