add in the magazine section

--- a/index.html
+++ b/index.html
@@ -555,7 +555,139 @@
         </div>
         
 
+        <!-- In the magazine -->
 
+        <div class="in-the-magazine">
+            <div class="header-editor in-the-magazinee">
+                <span class="icon-n"></span>
+                IN THE MAGAZINE
+            </div>
+            <div class="upper-part row">
+                <div class="flex-sm-3">
+                    <div class="wrap">
+                        <div class="category">
+                            <a href="#">POLITICS</a>
+                        </div>
+                       <a href="#"><picture class="mapping-tablet lazysize">
+                        <img src="https://web.archive.org/web/20210120125445im_/https://d.newsweek.com/en/full/1704591/cover-january-22-2021.jpg?w=360&amp;h=480&amp;q=90&amp;f=e1049b6d5baff23ff83f052690f407fa" alt="" width="360" height="480" class="mapping-tablet lazysize lazyloaded">
+                        </picture></a>
+                    </div>
+                    <h4><a href="#">SEE ALL FEATURES ></a></h4>
+                </div>
+                <div class="flex-sm-9">
+                    <div class="row top-part">
+                        <article class="col-md-4">
+                            <div class="magazine-image">
+                                <a href="#"><picture width="466" height="311" class="mapping-tablet lazysize">
+                                    <img data-src="https://web.archive.org/web/20210120125445/https://d.newsweek.com/en/full/1699861/pro-trump-mob-seizes-capitol.jpg?w=466&amp;h=311&amp;q=90&amp;f=6211816ab79c75bb0b17db7278ec3b29" alt="" width="466" height="311" class="mapping-tablet lazysize lazyloaded" src="https://web.archive.org/web/20210120125445im_/https://d.newsweek.com/en/full/1699861/pro-trump-mob-seizes-capitol.jpg?w=466&amp;h=311&amp;q=90&amp;f=6211816ab79c75bb0b17db7278ec3b29">
+                                    </picture></a>
+                            </div>
+                            <div class="magazine-category">
+                                <span class="mag-cat">COVER</span>
+                                <span class="cat">
+                                    <a href="/culture">News</a>
+                                </span>
+                            </div>
+                            <h5><a href="#">FBI, DHS, White House Advisers Foresaw Possible Riots, Looked the Other Way</a></h5>
+                        </article>
+                        <article class="col-md-4">
+                            <div class="magazine-image">
+                                <a href="#"><picture width="466" height="311" class="mapping-tablet lazysize">
+                                    <img data-src="https://web.archive.org/web/20210120125445/https://d.newsweek.com/en/full/1700564/trmpford.jpg?w=466&amp;h=311&amp;q=90&amp;f=71ae3eb76e6ca1bd8befdcb5511eddd7" alt="" width="466" height="311" class="mapping-tablet lazysize lazyloaded" src="https://web.archive.org/web/20210120125445im_/https://d.newsweek.com/en/full/1700564/trmpford.jpg?w=466&amp;h=311&amp;q=90&amp;f=71ae3eb76e6ca1bd8befdcb5511eddd7">
+                                    </picture></a>
+                            </div>
+                            <div class="magazine-category">
+                                <span class="mag-cat">FEATURES</span>
+                                <span class="cat">
+                                    <a href="/culture">Opinion</a>
+                                </span>
+                            </div>
+                            <h5><a href="#">On His Way Out, Trump Trashes America—and the GOP</a></h5>
+                        </article>
+                        <article class="col-md-4">
+                            <div class="magazine-image">
+                                <a href="#"><picture width="466" height="311" class="mapping-tablet lazysize">
+                                    <img data-src="https://web.archive.org/web/20210120125445/https://d.newsweek.com/en/full/1700594/trump-protest-capitol-washington.jpg?w=466&amp;h=311&amp;q=90&amp;f=a9837670139bfe8eb3a5f707e5698120" alt="" width="466" height="311" class="mapping-tablet lazysize lazyloaded" src="https://web.archive.org/web/20210120125445im_/https://d.newsweek.com/en/full/1700594/trump-protest-capitol-washington.jpg?w=466&amp;h=311&amp;q=90&amp;f=a9837670139bfe8eb3a5f707e5698120">
+                                    </picture></a>
+                            </div>
+                            <div class="magazine-category">
+                                <span class="mag-cat">FEATURES</span>
+                                <span class="cat">
+                                    <a href="/culture">World</a>
+                                </span>
+                            </div>
+                            <h5><a href="#">Nations Targeted by US for Regime Change Mock Mob Attack on Capitol</a></h5>
+                        </article>
+                    </div>
+                </div>
+            </div>
+            <div class="bottom-part row">
+                <article class="col-md-3">
+                    <div class="magazine-image">
+                        <a href="#"><picture width="466" height="311" class="mapping-tablet lazysize">
+                            <img data-src="https://web.archive.org/web/20210120125445/https://d.newsweek.com/en/full/1706936/fe-american-coup-01-1230457776.jpg?w=466&amp;h=311&amp;l=49&amp;t=34&amp;q=90&amp;f=fe61d7f4d031885dc95b2006bc5fab84" alt="" width="466" height="311" class="mapping-tablet lazysize lazyloaded" src="https://web.archive.org/web/20210120125445im_/https://d.newsweek.com/en/full/1706936/fe-american-coup-01-1230457776.jpg?w=466&amp;h=311&amp;l=49&amp;t=34&amp;q=90&amp;f=fe61d7f4d031885dc95b2006bc5fab84">
+                            </picture></a>
+                    </div>
+                    <div class="magazine-category">
+                        <span class="mag-cat">FEATURES</span>
+                        <span class="cat">
+                            <a href="/culture">Culture</a>
+                        </span>
+                    </div>
+                    <h5><a href="#">War on Democracy: the Capitol Riot, in Pictures</a></h5>
+                </article>
+                <article class="col-md-3">
+                    <div class="magazine-image">
+                        <a href="#"><picture width="466" height="311" class="mapping-tablet lazysize">
+                            <img data-src="https://web.archive.org/web/20210120125445/https://d.newsweek.com/en/full/1698197/libya-commander-war-funeral.jpg?w=466&amp;h=311&amp;q=90&amp;f=ce913047f187e76ab4bfef163506e586" alt="" width="466" height="311" class="mapping-tablet lazysize lazyloaded" src="https://web.archive.org/web/20210120125445im_/https://d.newsweek.com/en/full/1698197/libya-commander-war-funeral.jpg?w=466&amp;h=311&amp;q=90&amp;f=ce913047f187e76ab4bfef163506e586">
+                            </picture></a>
+                    </div>
+                    <div class="magazine-category">
+                        <span class="mag-cat">PERISCOPE</span>
+                        <span class="cat">
+                            <a href="/culture">Culture</a>
+                        </span>
+                    </div>
+                    <h5><a href="#">10 Years After the Arab Spring, Uncertainty Dominates the Region</a></h5>
+                </article>
+                <article class="col-md-3">
+                    <div class="magazine-image">
+                        <a href="#"><picture width="466" height="311" class="mapping-tablet lazysize">
+                            <img data-src="https://web.archive.org/web/20210120125445/https://d.newsweek.com/en/full/1708426/per-london-warrwick-01.jpg?w=466&amp;h=311&amp;l=50&amp;t=21&amp;q=90&amp;f=794d082fb0bfbc2f82c4422fb0943d90" alt="" width="466" height="311" class="mapping-tablet lazysize lazyloaded" src="https://web.archive.org/web/20210120125445im_/https://d.newsweek.com/en/full/1708426/per-london-warrwick-01.jpg?w=466&amp;h=311&amp;l=50&amp;t=21&amp;q=90&amp;f=794d082fb0bfbc2f82c4422fb0943d90">
+                            </picture></a>
+                    </div>
+                    <div class="magazine-category">
+                        <span class="mag-cat">PERISCOPE</span>
+                        <span class="cat">
+                            <a href="/culture">Culture</a>
+                        </span>
+                    </div>
+                    <h5><a href="#">'I'm 11, I Started a Cake Baking Business During The Pandemic'</a></h5>
+                </article>
+                <article class="col-md-3">
+                    <div class="magazine-image">
+                        <a href="#"><picture width="466" height="311" class="mapping-tablet lazysize">
+                            <img data-src="https://web.archive.org/web/20210120125445/https://d.newsweek.com/en/full/1706934/cul-rhye-01.jpg?w=466&amp;h=311&amp;l=50&amp;t=42&amp;q=90&amp;f=eb29dadf2100bcf27d4d75f25d508d01" alt="" width="466" height="311" class="mapping-tablet lazysize lazyloaded" src="https://web.archive.org/web/20210120125445im_/https://d.newsweek.com/en/full/1706934/cul-rhye-01.jpg?w=466&amp;h=311&amp;l=50&amp;t=42&amp;q=90&amp;f=eb29dadf2100bcf27d4d75f25d508d01">
+                            </picture></a>
+                    </div>
+                    <div class="magazine-category">
+                        <span class="mag-cat">DOWNTIME</span>
+                        <span class="cat">
+                            <a href="/culture">Culture</a>
+                        </span>
+                    </div>
+                    <h5><a href="#">Rhye Puts Down Roots</a></h5>
+                </article>
+            </div>
+        </div>
+
+        <!-- EDITOR'S PICK -->
+
+
+
+
+
+        
 
 
             <footer class="footerbb">
