add Editors Pick

--- a/index.html
+++ b/index.html
@@ -683,11 +683,102 @@
 
         <!-- EDITOR'S PICK -->
 
+        <div class="editor-section">
+            <div class="editor-section-cont">
+                <div class="header-editor">
+                    <span class="icon-n"></span>
+                    Editor's Pick
+                </div>
+                <div class="row">
+                    <article class="col-sm-12 col-md-6 col-lg-3">
+                        <div class="wrap">
+                            <div class="category">
+                                <a href="#">WORLD</a>
+                            </div>
+                           <a href="#"> 
+                               <img class="editor-img" src="assets/editor-1.webp" alt="">
+                            </a>
+                        </div>
+                        <h3><a href="#">Israel Security Officials Reveal Top Threats Faced on Four Fronts This Year</a></h3>
+                        <div class="summery">Newsweek spoke exclusively with four Israeli security officials charged with frontiers facing Syria, Lebanon, Gaza and the southern borders with Egypt and Jordan, revealing their primary security concerns for 2021.</div>
+                    </article>
+                    <article class="col-sm-12 col-md-6 col-lg-3">
+                        <div class="wrap">
+                            <div class="category">
+                                <a href="#">U.S</a>
+                            </div>
+                            <a href="#">  <img class="editor-img" src="assets/editor-2.webp" alt=""></a>
+                        </div>
+                        <h3><a href="#">Donald Trump's Pardon List Doesn't Include Himself or His Children</a></h3>
+                        <div class="summery">Trump released a list of pardons on Tuesday, as last-minute presidential pardons have been a long-standing custom for outgoing presidents.</div>
+                    </article>
+                    <article class="col-sm-12 col-md-6 col-lg-3">
+                        <div class="wrap">
+                            <div class="category">
+                                <a href="#">U.S</a>
+                            </div>
+                            <a href="#"> <img class="editor-img" src="assets/editor-3.webp" alt=""></a>
+                        </div>
+                        <h3><a href="#">More Stimulus Checks Largely Wanted for Bills, Debts and Essentials</a></h3>
+                        <div class="summery">The coronavirus crisis continues to cause economic hardship across the nation, with continued calls for further direct payments to assist those struggling.</div>
+                    </article>
+                    <article class="col-sm-12 col-md-6 col-lg-3">
+                        <div class="wrap">
+                            <div class="category">
+                                <a href="#">U.S</a>
+                            </div>
+                            <a href="#"><img class="editor-img" src="assets/editor-4.webp" alt=""></a>
+                        </div>
+                        <h3><a href="#">Gavin Newsom, Facing Recall, Accelerates Sluggish Vaccine Rollout</a></h3>
+                        <div class="summery">Slightly more than 1.3 million people in California had received a COVID-19 vaccine by Saturday.</div>
+                    </article>
+                    <article class="col-sm-12 col-md-6 col-lg-3">
+                        <div class="wrap">
+                            <div class="category">
+                                <a href="#">TECH</a>
+                            </div>
+                            <a href="#"><img class="editor-img" src="assets/editor-5.webp" alt=""></a>
+                        </div>
+                        <h3><a href="#">Paris Climate Agreement Explained As Joe Biden Plans to Rejoin</a></h3>
+                        <div class="summery">The incoming Biden administrate plans to the the U.S. up to the according on inauguration day.</div>
+                    </article>
+                    <article class="col-sm-12 col-md-6 col-lg-3">
+                        <div class="wrap">
+                            <div class="category">
+                                <a href="#">TECH</a>
+                            </div>
+                            <a href="#"><img class="editor-img" src="assets/editor-6.webp" alt=""></a>
+                        </div>
+                        <h3><a href="#">Trump's Facebook Gets Almost 200,000 Likes Despite Being Blocked after Riot</a></h3>
+                        <div class="summery">The president—who will exit the White House on Wednesday following the inauguration of Joe Biden—was effectively exiled from mainstream social media platforms this month after the violence.</div>
+                    </article>
+                    <article class="col-sm-12 col-md-6 col-lg-3">
+                        <div class="wrap">
+                            <div class="category">
+                                <a href="#">U.S</a>
+                            </div>
+                            <a href="#"><img class="editor-img" src="assets/editor-7.webp" alt=""></a>
+                        </div>
+                        <h3><a href="#">Faith in Governors' COVID-19 Plans Drops to New Low During Vaccine Rollout</a></h3>
+                        <div class="summery">Polling has shown growing dissatisfaction in how action has been communicated, as cases continue to rise and the number of deaths linked to COVID-19 in the U.S. nears 400,000.</div>
+                    </article>
+                    <article class="col-sm-12 col-md-6 col-lg-3">
+                        <div class="wrap">
+                            <div class="category">
+                                <a href="#">U.S</a>
+                            </div>
+                            <a href="#"><img class="editor-img" src="assets/editor-5.webp" alt=""></a>
+                        </div>
+                        <h3><a href="#">What Joe Biden Has Promised To Do on His First Day as President</a></h3>
+                        <div class="summery">The president-elect plans to reverse the so-called "Muslim ban" and the exit from the Paris Climate Accords.</div>
+                    </article>
+                </div>
+            </div>
+        </div>
 
 
 
 
-        
 
 
             <footer class="footerbb">
