fixed img myturn

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                             <div class="culture-items flex-sm">
                                 <div class="culture-item col-lg-4">
                                     <div class="image">
-                                        <a href="#"><img src="/img/7.webp" alt=""></a>
+                                        <a href="#"><img src="assets/myturn.jpg" alt=""></a>
                                     </div>
                                     <div class="info">
                                         <a href="#">'I Married My Best Friend to Avoid Inheritance Tax'</a>
