--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                                     <span class="bg-light font-weight-bolder p-1">SPONSORED INSIGHT</span>
                                     <div class="w-100 px-3">
                                         <h5 class="font-weight-bolder">Hungary: From Manufacturing Hub to Innovation and
-                                            R&D; Center</h5>
+                                            Center</h5>
                                         <p>With its pro-business agenda and open-border policy for investors, the
                                             Central European nation is
                                             hoping to bounce back from the COVID-19 crisis, while making greater strides
@@ -191,7 +191,8 @@
                                     <img class="w-100" src="assets/insight-6.jpg" alt=" ">
                                     <span class="bg-light font-weight-bolder p-1">SPONSORED INSIGHT</span>
                                     <div class="w-100 px-3">
-                                        <h5 class="font-weight-bolder">75% of Roofstock users are first-time real estate
+                                        <h5 class="font-weight-bolder"> This Startup Is Making Long Distance Real Estate Investing Possible for Millennials</h5>
+                                            <p>75% of Roofstock users are first-time real estate
                                             investors, and more than half are under 35.</p>
                                     </div>
                                 </a>
@@ -757,7 +758,7 @@
                         <article class="col-md-4">
                             <div class="magazine-image">
                                 <a href="#">
-                                    <picture width="466" height="311" class="mapping-tablet lazysize">
+                                    <picture class="mapping-tablet lazysize">
                                         <img data-src="https://web.archive.org/web/20210120125445/https://d.newsweek.com/en/full/1699861/pro-trump-mob-seizes-capitol.jpg?w=466&amp;h=311&amp;q=90&amp;f=6211816ab79c75bb0b17db7278ec3b29"
                                             alt="" width="466" height="311" class="mapping-tablet lazysize lazyloaded"
                                             src="https://web.archive.org/web/20210120125445im_/https://d.newsweek.com/en/full/1699861/pro-trump-mob-seizes-capitol.jpg?w=466&amp;h=311&amp;q=90&amp;f=6211816ab79c75bb0b17db7278ec3b29">
@@ -1042,6 +1043,7 @@
                     Terms of Sale </a>
                 <a href="">Archive </a>
                 <a href="">Announcements </a>
+            </div>
         </footer>
 
         <!-- Optional JavaScript -->
