--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@
                                         <span class="bg-light font-weight-bolder p-1">SPONSORED INSIGHT</span>
                                         <div class="w-100 px-3">
                                             <h5 class="font-weight-bolder">Hungary: From Manufacturing Hub to Innovation
-                                                and R&D; Center</h5>
+                                                and RD; Center</h5>
                                             <p>With its pro-business agenda and open-border policy for investors, the
                                                 Central European nation is
                                                 hoping to bounce back from the COVID-19 crisis, while making greater
@@ -747,7 +747,7 @@
                         <a href="#">
                             <picture class="mapping-tablet lazysize">
                                 <img src="https://web.archive.org/web/20210120125445im_/https://d.newsweek.com/en/full/1704591/cover-january-22-2021.jpg?w=360&amp;h=480&amp;q=90&amp;f=e1049b6d5baff23ff83f052690f407fa"
-                                    alt="" width="360" height="480" class="mapping-tablet lazysize lazyloaded">
+                                    alt=""  class="mapping-tablet lazysize lazyloaded">
                             </picture>
                         </a>
                     </div>
@@ -760,7 +760,7 @@
                                 <a href="#">
                                     <picture class="mapping-tablet lazysize">
                                         <img data-src="https://web.archive.org/web/20210120125445/https://d.newsweek.com/en/full/1699861/pro-trump-mob-seizes-capitol.jpg?w=466&amp;h=311&amp;q=90&amp;f=6211816ab79c75bb0b17db7278ec3b29"
-                                            alt="" width="466" height="311" class="mapping-tablet lazysize lazyloaded"
+                                            alt="" class="mapping-tablet lazysize lazyloaded"
                                             src="https://web.archive.org/web/20210120125445im_/https://d.newsweek.com/en/full/1699861/pro-trump-mob-seizes-capitol.jpg?w=466&amp;h=311&amp;q=90&amp;f=6211816ab79c75bb0b17db7278ec3b29">
                                     </picture>
                                 </a>
@@ -777,9 +777,9 @@
                         <article class="col-md-4">
                             <div class="magazine-image">
                                 <a href="#">
-                                    <picture width="466" height="311" class="mapping-tablet lazysize">
+                                    <picture class="mapping-tablet lazysize">
                                         <img data-src="https://web.archive.org/web/20210120125445/https://d.newsweek.com/en/full/1700564/trmpford.jpg?w=466&amp;h=311&amp;q=90&amp;f=71ae3eb76e6ca1bd8befdcb5511eddd7"
-                                            alt="" width="466" height="311" class="mapping-tablet lazysize lazyloaded"
+                                            alt="" class="mapping-tablet lazysize lazyloaded"
                                             src="https://web.archive.org/web/20210120125445im_/https://d.newsweek.com/en/full/1700564/trmpford.jpg?w=466&amp;h=311&amp;q=90&amp;f=71ae3eb76e6ca1bd8befdcb5511eddd7">
                                     </picture>
                                 </a>
@@ -795,9 +795,9 @@
                         <article class="col-md-4">
                             <div class="magazine-image">
                                 <a href="#">
-                                    <picture width="466" height="311" class="mapping-tablet lazysize">
+                                    <picture class="mapping-tablet lazysize">
                                         <img data-src="https://web.archive.org/web/20210120125445/https://d.newsweek.com/en/full/1700594/trump-protest-capitol-washington.jpg?w=466&amp;h=311&amp;q=90&amp;f=a9837670139bfe8eb3a5f707e5698120"
-                                            alt="" width="466" height="311" class="mapping-tablet lazysize lazyloaded"
+                                            alt="" class="mapping-tablet lazysize lazyloaded"
                                             src="https://web.archive.org/web/20210120125445im_/https://d.newsweek.com/en/full/1700594/trump-protest-capitol-washington.jpg?w=466&amp;h=311&amp;q=90&amp;f=a9837670139bfe8eb3a5f707e5698120">
                                     </picture>
                                 </a>
@@ -817,9 +817,9 @@
                 <article class="col-md-3">
                     <div class="magazine-image">
                         <a href="#">
-                            <picture width="466" height="311" class="mapping-tablet lazysize">
+                            <picture class="mapping-tablet lazysize">
                                 <img data-src="https://web.archive.org/web/20210120125445/https://d.newsweek.com/en/full/1706936/fe-american-coup-01-1230457776.jpg?w=466&amp;h=311&amp;l=49&amp;t=34&amp;q=90&amp;f=fe61d7f4d031885dc95b2006bc5fab84"
-                                    alt="" width="466" height="311" class="mapping-tablet lazysize lazyloaded"
+                                    alt="" class="mapping-tablet lazysize lazyloaded"
                                     src="https://web.archive.org/web/20210120125445im_/https://d.newsweek.com/en/full/1706936/fe-american-coup-01-1230457776.jpg?w=466&amp;h=311&amp;l=49&amp;t=34&amp;q=90&amp;f=fe61d7f4d031885dc95b2006bc5fab84">
                             </picture>
                         </a>
@@ -835,9 +835,9 @@
                 <article class="col-md-3">
                     <div class="magazine-image">
                         <a href="#">
-                            <picture width="466" height="311" class="mapping-tablet lazysize">
+                            <picture class="mapping-tablet lazysize">
                                 <img data-src="https://web.archive.org/web/20210120125445/https://d.newsweek.com/en/full/1698197/libya-commander-war-funeral.jpg?w=466&amp;h=311&amp;q=90&amp;f=ce913047f187e76ab4bfef163506e586"
-                                    alt="" width="466" height="311" class="mapping-tablet lazysize lazyloaded"
+                                    alt="" class="mapping-tablet lazysize lazyloaded"
                                     src="https://web.archive.org/web/20210120125445im_/https://d.newsweek.com/en/full/1698197/libya-commander-war-funeral.jpg?w=466&amp;h=311&amp;q=90&amp;f=ce913047f187e76ab4bfef163506e586">
                             </picture>
                         </a>
@@ -853,9 +853,9 @@
                 <article class="col-md-3">
                     <div class="magazine-image">
                         <a href="#">
-                            <picture width="466" height="311" class="mapping-tablet lazysize">
+                            <picture class="mapping-tablet lazysize">
                                 <img data-src="https://web.archive.org/web/20210120125445/https://d.newsweek.com/en/full/1708426/per-london-warrwick-01.jpg?w=466&amp;h=311&amp;l=50&amp;t=21&amp;q=90&amp;f=794d082fb0bfbc2f82c4422fb0943d90"
-                                    alt="" width="466" height="311" class="mapping-tablet lazysize lazyloaded"
+                                    alt="" class="mapping-tablet lazysize lazyloaded"
                                     src="https://web.archive.org/web/20210120125445im_/https://d.newsweek.com/en/full/1708426/per-london-warrwick-01.jpg?w=466&amp;h=311&amp;l=50&amp;t=21&amp;q=90&amp;f=794d082fb0bfbc2f82c4422fb0943d90">
                             </picture>
                         </a>
@@ -871,9 +871,9 @@
                 <article class="col-md-3">
                     <div class="magazine-image">
                         <a href="#">
-                            <picture width="466" height="311" class="mapping-tablet lazysize">
+                            <picture class="mapping-tablet lazysize">
                                 <img data-src="https://web.archive.org/web/20210120125445/https://d.newsweek.com/en/full/1706934/cul-rhye-01.jpg?w=466&amp;h=311&amp;l=50&amp;t=42&amp;q=90&amp;f=eb29dadf2100bcf27d4d75f25d508d01"
-                                    alt="" width="466" height="311" class="mapping-tablet lazysize lazyloaded"
+                                    alt="" class="mapping-tablet lazysize lazyloaded"
                                     src="https://web.archive.org/web/20210120125445im_/https://d.newsweek.com/en/full/1706934/cul-rhye-01.jpg?w=466&amp;h=311&amp;l=50&amp;t=42&amp;q=90&amp;f=eb29dadf2100bcf27d4d75f25d508d01">
                             </picture>
                         </a>
