--- a/index.html
+++ b/index.html
@@ -998,10 +998,265 @@
             </div>
         </div>
 
+            <!-- U.S SECTION -->
 
+            <div class="content">
+                <div class="block-title">
+                    <a href="">U.S.</a>
+                </div>
+                <div class="row">
+                    <div></div>
+                    <div class="col-md-4">
+                        <article>
+                            <img src="assets/homeless.jpg" alt="" class="feature1-image">
+                            <h4><a href="">Indiana Homeless Man Chooses to Be Arrested to Avoid Cold Weather</a></h4>
+                        </article>
+                    </div>
+                    <div class="col-md-4">
+                        <article>
+                            <img src="assets/taipei.jpg" alt="taipei" class="feature1-image">
+                            <h4><a href="">Taipei Says Biden Backs Taiwan As Blinken Warns Invasion 'Grievous Mistake'</a></h4>
+                        </article>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="feature">
+                            <ul>
+                                <li class="flex-xs border-bottom">
+                                    <img src="assets/tigerking.jpg" alt="" class="feature2-image">
+                                    <a href="">'Tiger King' Zoo Owners Ordered To Hand Over Big Cats to Government</a>
+                                </li>
+                                <li class="flex-xs border-bottom">
+                                    <img src="assets/us-right-3.jpg" alt="" class="feature2-image">
+                                    <a href="">Trump Cuts Kwame Kilpatrick's Jail Time for Detroit Corruption by 20 Years</a>
+                                </li>
+                                <li class="flex-xs">
+                                    <img src="assets/us-right-4.jpg" alt="" class="feature2-image">
+                                    <a href="">Video of Police Dog Arlo Going Home After Shooting Viewed 41 Million Times</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="block-title">
+                    <a href="">U.S.</a>
+                </div>
+                <div class="row">
+                    <div></div>
+                    <div class="col-md-4">
+                        <article>
+                            <img src="assets/us-right-5.jpg" alt="" class="feature1-image">
+                            <h4><a href="">Biden Offers 'Democracy and Decency' After Trump, Says Former U.K. PM</a></h4>
+                        </article>
+                    </div>
+                    <div class="col-md-4">
+                        <article>
+                            <img src="assets/us-right-6.jpg" alt="" class="feature1-image">
+                            <h4><a href="">Scottish Petition Posted to Rename Airport Near Trump Golf Club After Biden</a></h4>
+                        </article>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="feature">
+                            <ul>
+                                <li class="flex-xs border-bottom">
+                                    <img src="assets/us-right-7.jpg" alt="" class="feature2-image">
+                                    <a href="">New Zealand's 20,000-Person Concert Marks 2 Months Without COVID in Country</a>
+                                </li>
+                                <li class="flex-xs border-bottom">
+                                    <img src="assets/us-right-8.jpg" alt="" class="feature2-image">
+                                    <a href="">South Korea Sees Biden in Office as 'Turning Point' for North Peace Talks</a>
+                                </li>
+                                <li class="flex-xs">
+                                    <img src="assets/us-right-9.jpg" alt="" class="feature2-image">
+                                    <a href="">Antony Blinken, Biden's State Department Pick, Says Trump Got China 'Right'</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="block-title">
+                    <a href="">U.S.</a>
+                </div>
+                <div class="row">
+                    <div></div>
+                    <div class="col-md-4">
+                        <article>
+                            <img src="assets/us-right-10.jpg" alt="" class="feature1-image">
+                            <h4><a href="">The Absolutely American Life of Sheldon Adelson</a></h4>
+                        </article>
+                    </div>
+                    <div class="col-md-4">
+                        <article>
+                            <img src="assets/us-right-11.jpg" alt="" class="feature1-image">
+                            <h4><a href="">'Horrified' Loews Hotels Cancel GOP Sen. Josh Hawley Fundraiser</a></h4>
+                        </article>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="feature">
+                            <ul>
+                                <li class="flex-xs border-bottom">
+                                    <img src="assets/us-right-12.jpg" alt="" class="feature2-image">
+                                    <a href=""> Corporations, Billionaire Execs, Fund GOP Voter-Fraud Claimants
+                                        Hidden Way Corporations, Billionaire Execs, Fund GOP Voter-Fraud Claimants</a>
+                                </li>
+                                <li class="flex-xs border-bottom">
+                                    <img src="assets/us-right-13.jpg" alt="" class="feature2-image">
+                                    <a href="">Disney, Other Trusted Brands Funded Misinformation that Fueled Capitol Riot</a>
+                                </li>
+                                <li class="flex-xs">
+                                    <img src="assets/us-right-14.jpg" alt="" class="feature2-image">
+                                    <a href="">Walmart, Donor of Millions to GOP, No Longer Funding Election Objectors</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="block-title">
+                    <a href="">U.S.</a>
+                </div>
+                <div class="row">
+                    <div></div>
+                    <div class="col-md-4">
+                        <article>
+                            <img src="assets/us-right-15.jpg" alt="" class="feature1-image">
+                            <h4><a href="">Trump Pardons Anthony Levandowski, Engineer Who Stole Google Trade Secrets</a></h4>
+                        </article>
+                    </div>
+                    <div class="col-md-4">
+                        <article>
+                            <img src="assets/us-right-16.jpg" alt="" class="feature1-image">
+                            <h4><a href="">Why Netflix No Longer Offers a Free Trial</a></h4>
+                        </article>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="feature">
+                            <ul>
+                                <li class="flex-xs border-bottom">
+                                    <img src="assets/us-right-17.jpg" alt="" class="feature2-image">
+                                    <a href="">Joe Biden's Social Media Following Up by Millions Ahead of Inauguration</a>
+                                </li>
+                                <li class="flex-xs border-bottom">
+                                    <img src="assets/us-right-18.jpg" alt="" class="feature2-image">
+                                    <a href="">Trillions of Brood 10 Cicadas to Emerge in U.S. After 17 Years Underground</a>
+                                </li>
+                                <li class="flex-xs">
+                                    <img src="assets/us-right-19.jpg" alt="" class="feature2-image">
+                                    <a href="">Parler's Amy Peikoff Quotes MLK In First Post Since Site's Return</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="block-title">
+                    <a href="">U.S.</a>
+                </div>
+                <div class="row">
+                    <div></div>
+                    <div class="col-md-4">
+                        <article>
+                            <img src="assets/us-right-20.jpg" alt="" class="feature1-image">
+                            <h4><a href="">Jared Padalecki on how his 'Walker' Reboot Differs From the Original</a></h4>
+                        </article>
+                    </div>
+                    <div class="col-md-4">
+                        <article>
+                            <img src="assets/us-right-21.jpg" alt="" class="feature1-image">
+                            <h4><a href="">'Riverdale' Season 5 Netflix Release Date</a></h4>
+                        </article>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="feature">
+                            <ul>
+                                <li class="flex-xs border-bottom">
+                                    <img src="assets/us-right-22.jpg" alt="" class="feature2-image">
+                                    <a href="">Here Are Donald Trump's Reasons for Pardoning Lil Wayne</a>
+                                </li>
+                                <li class="flex-xs border-bottom">
+                                    <img src="assets/us-right-23.jpg" alt="" class="feature2-image">
+                                    <a href="">'Tiger King' Zoo Owners Ordered To Hand Over Big Cats to Government</a>
+                                </li>
+                                <li class="flex-xs">
+                                    <img src="assets/us-right-24.jpg" alt="" class="feature2-image">
+                                    <a href="">Ghislaine Maxwell Hearing Disrupted by YouTube Stream to QAnon Followers</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="block-title">
+                    <a href="">U.S.</a>
+                </div>
+                <div class="row">
+                    <div></div>
+                    <div class="col-md-4">
+                        <article>
+                            <img src="assets/us-right-25.jpg" alt="" class="feature1-image">
+                            <h4><a href="">Does Houston Have a Problem? Springer and Harden Gone, Watson May Follow</a></h4>
+                        </article>
+                    </div>
+                    <div class="col-md-4">
+                        <article>
+                            <img src="assets/us-right-26.jpg" alt="" class="feature1-image">
+                            <h4><a href="">Karl Malone Calls out Zion Williamson: 'Your A** Shouldn't Get Tired'</a></h4>
+                        </article>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="feature">
+                            <ul>
+                                <li class="flex-xs border-bottom">
+                                    <img src="assets/us-right-27.jpg" alt="" class="feature2-image">
+                                    <a href="">Sarah Thomas to Become First Female to Officiate a Super Bowl Next Month</a>
+                                </li>
+                                <li class="flex-xs border-bottom">
+                                    <img src="assets/us-right-28.jpg" alt="" class="feature2-image">
+                                    <a href="">Kansas City Making Super Bowl Victory Plans With Two Games Still To Play</a>
+                                </li>
+                                <li class="flex-xs">
+                                    <img src="assets/us-right-29.jpg" alt="" class="feature2-image">
+                                    <a href="">2021 NFL Draft Order Top 28 Picks After Divisional Round</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="block-title">
+                    <a href="">U.S.</a>
+                </div>
+                <div class="row">
+                    <div></div>
+                    <div class="col-md-4">
+                        <article>
+                            <img src="assets/homeless.jpg" alt="homeless" class="feature1-image">
+                            <h4><a href="">Indiana Homeless Man Chooses to Be Arrested to Avoid Cold Weather</a></h4>
+                        </article>
+                    </div>
+                    <div class="col-md-4">
+                        <article>
+                            <img src="./img/1.webp" alt="" class="feature1-image">
+                            <h4><a href="">Newsweek Announces Launch of the Newsweek Expert Forum</a></h4>
+                        </article>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="feature">
+                            <ul>
+                                <li class="flex-xs border-bottom">
+                                    <img src="assets/us-right-30.jpg" alt="" class="feature2-image">
+                                    <a href="">Top Workplace Trends to Anticipate in 2021</a>
+                                </li>
+                                <li class="flex-xs border-bottom">
+                                    <img src="assets/us-right-31.jpg" alt="" class="feature2-image">
+                                    <a href="">Meet Six Founding Members of the Newsweek Expert Forum</a>
+                                </li>
+                                <li class="flex-xs">
+                                    <img src="assets/us-right-32.jpg" alt="" class="feature2-image">
+                                    <a href="">Get to Know Six Members of Newsweek Expert Forum</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+              </div>
 
-
-
+            <!-- U.S SECTION END -->
 
         <footer class="footerbb">
             <div class="d-flex flex-row justify-content-between footer d-sm flex-column">
